integrating warehouse module and stock level module
